# livsdiary

./: .gitignore  Makefile  README.md  TODO  build.py  clean.py  install-muon.py  install.py  livsdiary.desktop  meson.build
src/: command_line.cpp  command_line.hpp  commands.c  commands.h  converters.c  converters.h  editor.c  editor.h  filesystem.c  filesystem.h  livsdiary.h  main.c  main.cpp  main.h  main.hpp  meson.build  neovim.h  page.cpp  page.hpp  program.h  time.c  time.h  variables.h  version.h
src/neovim/: CMakeCache.txt  README.md
src/neovim/src/nvim/: main.c
